# novel-pt

./: README.md  build.bat  pyproject.toml  requirements.txt
src/novel_pt/: chapter_manager.py  config.py  main.py  novel_form.py  translator.py  web_scraper.py
