[tool.poetry]
name = "novel-pt"
version = "0.1.0"
description = "Aplicativo para tradução automática de novels"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "src.novel_pt.main:init"

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.6.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
python-docx = "^1.1.0"
transformers = "^4.37.2"
torch = "^2.2.0"
nltk = "^3.8.1"
selenium = "^4.18.1"
undetected-chromedriver = "^3.5.5"
webdriver-manager = "^4.0.1"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
